2005-04-28  Julian Foad  <julianfoad@btopenworld.com>

	* Makefile.am: Remove reference to long-gone files PATCHES.AC and
	  PATCHES.AM.  Thanks to Tony Abou-Assaleh for this.  Patch #3961.

2005-04-29  Charles Levert  <charles_levert@gna.org>

	* src/grep.c: Fix typo in prline()'s --only-matching --ignore-case
	  code path; this fixes bug #9768 and passes one more test
	  in tests/foad1.sh.  This whole code path should be removed in
	  the future, when other --ignore-case issues are dealt with.

2005-04-28  Julian Foad  <julianfoad@btopenworld.com>

 	* tests/foad1.sh: Remove Bash-specific syntax.

	* src/dfa.c: Fix a DFA bug whereby a bracket "[" was matched by the
	  pattern "[[:alpha:]]" in UTF-8 locales.  Patch #3800, by Tim Waugh.
 	* tests/foad1.sh: Add a regression test for that.

2005-04-27  Julian Foad  <julianfoad@btopenworld.com>

	Fix a bug reported by Elliott Hughes in patch #1834 whereby "grep -Fw"
	would miss matches after a non-word occurrence of the pattern.  Fix by
	Gordon Lack; tests based on reproduction recipes by Gordon Lack.

	* src/search.c (Fexecute): Fix the "match_words" case.
 	* tests/foad1.sh: Modify the test framework so that the "PATTERN"
	  argument is optional.  Add a regression test and a test for
	  a similar case that other proposed patches have got wrong.

	Add more tests, some initially failing.

 	* tests/foad1.sh: Add tests for "--color", most initially failing.
	* tests/fmbtest.sh: New file of tests for "grep -i" with multi-byte
	  chars, by Jakub Jelinek, from patch #3808: Red Hat's "tests" patch.
	  Initially, test #4 fails (in all three modes).
	* tests/Makefile.am: Include the new tests file "fmbtest.sh".

2005-04-12  Julian Foad  <julianfoad@btopenworld.com>

 	* tests/bre.tests: Enable a regression test for bug #9519.
 	* src/grep.c: Fix a seg-fault in "-o -i": patch #1939.
 	* tests/foad1.sh: New tests for "-o", initially all failing.
	* tests/Makefile.am: Include the new tests file "foad1.sh".